.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

3.3.1 - Unreleased
----------------

- Fix ITranslatable to use the canonical interface from LinguaPlone or fall
  back to a Zope3-style interface.
  [hannosch, witsch]

- Fixed a bug which deletes an object in the acquisition path instead of 
  the original object in case of a catalog inconsistency. This closes #9046.
  [pilz]


3.3 - August 18, 2009
---------------------

- Fix broken IE6 CSS support.
  [spliter]


3.3rc5 - August 1, 2009
-----------------------

- Remove trailing space from 
  history_compare_with_previous_inline.png.metadata filename.
  This fixes http://dev.plone.org/old/plone/ticket/9367
  [wichert].

- Modified the history viewlet style so actions are green without
  background and border. Messages are on a blue background.
  [vincentfretin]


3.3rc4 - July 7, 2009
---------------------

- Added migration step to fix missing cooked expressions in
  portal_css, which could mess up the site UI.  Fix by Tom Gross.
  Fixes http://dev.plone.org/plone/ticket/9141
  [maurits]

- Upgrade to jQuery 1.3.2. This fixes multiple bugs on various browsers,
  allows use of more jQuery plugins (particularly current versions of
  jQuery UI). The only BBB problem I am aware of is use of the @ in
  attribute selectors (as in a[@target=_blank]), which has been deprecated
  for a long time and is no longer supported in jQuery 1.3. 
  [wichert]

- Make the BBB support for registerIndexableAttribute() more robust by only
  registering the indexer adapters when ZCML is loaded. This should fix
  issues with functional tests written for older versions of Plone.
  [optilude]

- Don't rely on a Zope 2 style interface in the getObjPositionInParent
  indexer - accept the proper Zope 3 interface for IOrderedContainer as well.
  [optilude]
